# squeeze

./: .gitignore  .pre-commit-config.yaml  404.html  ADVANCED_OPTIMIZATIONS_DESIGN.md  AGENTS.md  BENCHMARKING.md  BENCHMARKING_STATUS.md  Cargo.toml  DOCUMENTATION_UPDATE_SUMMARY.md  FEATURES.md  FUTURE_ACCELERATION_IDEAS.md  LICENSE.txt  NAMING_AND_BRANDING.md  OPTIMIZATION_IMPLEMENTATION_SUMMARY.md  OPTIMIZATION_SUMMARY.md  PHASE_1_VALIDATION_SUMMARY.md  PREK.md  README.md  SIMD_IMPLEMENTATION_SUMMARY.md  UMAP_ANN_DOCUMENTATION_INDEX.md  azure-pipelines.yml  benchmark_hybrid_techniques.py  benchmark_metrics_heatmap.py  benchmark_optimizations.py  convert_rst_to_md.py  fix_all_ruff.py  fix_ruff_errors.py  hybrid_results.csv  index.html  justfile  metrics_results.csv  mkdocs.yml  paper.bib  pyproject.toml  sitemap.xml
.code/agents/2431/: exec-call_5EMUpTsnR2er25GuOAF7Mh97.txt
.code/agents/2be83620-304a-4308-8a45-2aad5753435d/: result.txt
.code/agents/3ca6997b-36e9-478a-b5eb-ed46d88fc392/: result.txt
.code/agents/48862824-ceb9-498c-abba-f915c5261d79/: result.txt
.code/agents/52b676cb-7f65-459a-8f28-95428cad44df/: result.txt
.github/workflows/: benchmark.yml  tests.yml
aligned_umap_basic_usage/: index.html
aligned_umap_politics_demo/: index.html
api/: index.html
basic_usage/: index.html
benches/: hnsw_benchmarks.rs
benchmarking/: index.html
clustering/: index.html
composing_models/: index.html
demos/: README.md  index.html  package.json
demos/scripts/: generate_embeddings.py
demos/src/: main.js  styles.css
densmap_demo/: index.html
development_roadmap/: index.html
doc/: Makefile  bokeh_digits_plot.py  conf.py  development_roadmap.rst  plotting_example_interactive.py  plotting_example_nomic_atlas.py
docs/: evaluation_metrics.md  interactive_metrics.md  research.md
docs/algorithms/: index.md  isomap.md  lle.md  mds.md  numerical_stability.md  pacmap.md  pca.md  phate.md  trimap.md  tsne.md
document_embedding/: index.html
embedding_space/: index.html
examples/: README.txt  galaxy10sdss.py  inverse_transform_example.py  mnist_torus_sphere_example.py  mnist_transform_new_data.py  plot_algorithm_comparison.py  plot_fashion-mnist_example.py  plot_feature_extraction_classification.py  plot_mnist_example.py  simd_demo.rs
examples/digits/: digits.html  digits.py
examples/iris/: iris.html  iris.py
exploratory_analysis/: index.html
faq/: index.html
how_umap_works/: index.html
interactive_viz/: index.html
inverse_transform/: index.html
mutual_nn_umap/: index.html
nomic_atlas_umap_of_text_embeddings/: index.html
nomic_atlas_visualizing_mnist_training_dynamics/: index.html
outliers/: index.html
parameters/: index.html
parametric_umap/: index.html
performance/: index.html
plotting/: index.html
precomputed_k-nn/: index.html
release_notes/: index.html
reproducibility/: index.html
scientific_papers/: index.html
scripts/: benchmark-pre-commit.sh  install-benchmark-hook.sh
search/: search_index.json
sparse/: index.html
squeeze/: __init__.py  aligned_umap.py  benchmark.py  composition.py  evaluation.py  extensions.py  hnsw_wrapper.py  layouts.py  metrics.py  parametric_umap.py  plot.py  sparse.py  sparse_ops.py  spectral.py  strategies.py  umap_.py  utils.py  validation.py
squeeze/tests/: __init__.py  conftest.py  test_aligned_umap.py  test_benchmark.py  test_chunked_parallel_spatial_metric.py  test_composite_models.py  test_composition.py  test_data_input.py  test_densmap.py  test_evaluation.py  test_extensions.py  test_hnsw_filtered_stub.py  test_hnsw_sparse.py  test_metrics.py  test_parametric_umap.py  test_plot.py  test_sparse_ops.py  test_spectral.py  test_umap_get_feature_names_out.py  test_umap_metrics.py  test_umap_nn.py  test_umap_on_iris.py  test_umap_ops.py  test_umap_repeated_data.py  test_umap_trustworthiness.py  test_umap_validation_params.py
src/: barnes_hut.rs  cache_aligned.rs  hnsw_algo.rs  hnsw_algo_robustprune.rs  hnsw_index.rs  isomap.rs  lib.rs  lle.rs  mds.rs  metrics.rs  metrics_simd.rs  mixed_precision.rs  numerical.rs  pacmap.rs  pca.rs  phate.rs  sparse_hnsw_index.rs  sparse_metrics.rs  trimap.rs  tsne.rs
supervised/: index.html
transform/: index.html
transform_landmarked_pumap/: index.html
umap/: __init__.py  aligned_umap.py  benchmark.py  distances.py  hnsw_wrapper.py  layouts.py  parametric_umap.py  plot.py  sparse.py  sparse_ops.py  spectral.py  umap_.py  utils.py  validation.py
umap/tests/: conftest.py  test_aligned_umap.py  test_benchmark.py  test_chunked_parallel_spatial_metric.py  test_composite_models.py  test_data_input.py  test_densmap.py  test_hnsw_filtered_stub.py  test_hnsw_sparse.py  test_parametric_umap.py  test_plot.py  test_sparse_ops.py  test_spectral.py  test_umap_get_feature_names_out.py  test_umap_metrics.py  test_umap_nn.py  test_umap_on_iris.py  test_umap_ops.py  test_umap_repeated_data.py  test_umap_trustworthiness.py  test_umap_validation_params.py
working_docs/: CONVERSION_SUMMARY.md  DOCUMENTATION_INDEX.md  DOCUMENTATION_UPDATES.md  FINAL_OPTIMIZATIONS_SUMMARY.md  GPU_POLICY.md  HNSW_ARCHITECTURE_SUMMARY.md  HNSW_IMPLEMENTATION_REVIEW.md  OPTIMIZATION_OPPORTUNITIES_2025.md  OPTIMIZATION_SUMMARY.md  RUST_IMPLEMENTATION_GAPS.md  UMAP_ANN_ANALYSIS.md  UMAP_ANN_CODE_LOCATIONS.md  UMAP_ANN_EXPLORATION_SUMMARY.md  USAGE_GUIDE.md
(+4 files in other folders)
