[package]
name = "_hnsw_backend"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"

[lib]
name = "_hnsw_backend"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.21", features = ["extension-module", "abi3-py39"] }
numpy = "0.21"
ndarray = "0.15"
rayon = "1.8"
thiserror = "1.0"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
approx = "0.5"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
