[package]
name = "_hnsw_backend"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
description = "High-performance dimensionality reduction algorithms for squeeze"

[lib]
name = "_hnsw_backend"
crate-type = ["cdylib", "rlib"]

[features]
default = []
extension-module = ["pyo3/extension-module"]

[dependencies]
pyo3 = { version = "0.21", features = ["abi3-py39"] }
numpy = "0.21"
ndarray = "0.15"
ndarray-linalg = { version = "0.16", features = ["openblas-static"] }
rayon = "1.8"
thiserror = "1.0"
parking_lot = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.9.2"
rand_distr = "0.5"
bincode = "1.3.3"
half = { version = "2.3", features = ["std", "serde"] }
ordered-float = "4.2"
num-traits = "0.2"

[dev-dependencies]
approx = "0.5"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.4"

[[bench]]
name = "hnsw_benchmarks"
harness = false

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
