[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "squeeze"
version = "0.1.0"
description = "High-performance dimensionality reduction library (UMAP, t-SNE, PCA, and more)"
readme = "README.md"
license = {text = "BSD"}
keywords = ["dimension reduction", "umap", "t-sne", "pca", "manifold", "visualization", "machine learning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved",
    "Programming Language :: Python",
    "Programming Language :: Rust",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Visualization",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Operating System :: Unix",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.9"
dependencies = [
    "numpy > 2",
    "scipy >= 1.3.1",
    "scikit-learn >= 1.6",
    "numba >= 0.51.2",
    "pynndescent >= 0.5",
    "tqdm",
]

[[project.maintainers]]
name = "George Pearse"

[project.urls]
Homepage = "http://github.com/georgepearse/squeeze"
Repository = "http://github.com/georgepearse/squeeze"

[project.optional-dependencies]
plot = [
    "pandas",
    "matplotlib",
    "datashader",
    "bokeh",
    "holoviews",
    "colorcet",
    "seaborn",
    "scikit-image",
    "dask",
]
parametric = ["tensorflow >= 2.1"]
tbb = ["tbb >= 2019.0"]
test = ["pytest", "pytest-testmon", "pytest-watch"]
benchmark = ["matplotlib"]
dev = ["pytest", "pytest-testmon", "pytest-watch", "matplotlib", "ruff", "pre-commit"]

[tool.setuptools]
packages = ["squeeze"]
zip-safe = false

[tool.setuptools.package-data]
"*" = ["*.pyx", "*.pxd"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["FBT001", "FBT002", "FBT003"]  # Boolean arguments are OK in scientific code

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[tool.ruff.lint.per-file-ignores]
"squeeze/tests/*" = [
    "D100",    # Missing module docstring
    "D101",    # Missing class docstring
    "S101",    # Use of assert (required in tests)
]
"setup.py" = ["D100"]
"squeeze/hnsw_wrapper.py" = [
    "PLR0913",  # Too many arguments - needed for compatibility
    "N803",     # Argument name X should be lowercase - sklearn convention
    "N806",     # Variable X in function should be lowercase - sklearn convention
]


[tool.pytest.ini_options]
testmon_db = ".testmon.db"
addopts = "-v"

[tool.maturin]
features = ["pyo3/extension-module"]
python-source = "."
module-name = "squeeze._hnsw_backend"
